(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

6.26.0  2015-07-27

API Changes:
  * util-core: `Activity`, `BoundedStack`, `RingBuffer` and `Var` migrated
    off of deprecated `ClassManifest` to `ClassTag`. ``RB_ID=720455``

Changes in Runtime Behavior:
  * util-core: `Promise.forwardInterruptsTo(other)` is a no-op if the
                other future is fulfilled. ``RB_ID=714420``

  * util-events: Recording of events is disabled by default and can be updated
                 at runtime via TwitterServer's `/admin/events` page or
                 `/admin/events/{recordOn,recordOff}`. ``RB_ID=715712``

6.25.0  2015-06-22

Changes in Runtime Behavior:
  * util-events: Enable event sink by default.

6.24.0  2015-04-12

New Features:
  * util-core: Introduce AsyncStream, an experimental replacement for Spool.

API Changes:
  * util-core: `Future.willEqual()` now returns `Future[Boolean]` instead of
               `Promise[Boolean]`.

  * util-core: rename VarSource to ActivitySource. remove
               com.twitter.io.exp.VarSource.Result, return Activity[T]
               instead of Var[VarSource.Result[T]]. Remove FailoverVarSource in
               favor of ActivitySource.orElse.

  * util-core: `TimeFormat` now throws IllegalArgumentException if the pattern
               uses the week year ('Y') without the week number ('w')
  * util-core: `Spool.++` used to force its argument, but now it is evaluated
               only if `this` Spool is empty. To revert to existing behavior,
               simply force the argument before passing it to ++.

  * util-core: `Reader.writable()` returns a new type, `Reader.Writable`, which
               combines `Reader`, `Writer` and `Closable`.
  * util-core: `Reader.concat` and `Reader.copyMany` now take an AsyncStream
               argument instead of Spool.
