@@ -100,6 +100,24 @@ sealed trait Spool[+A] {
     }
 
   /**
+   * Zips two [[Spool Spools]] returning a Spool of Tuple2s.
+   * 
+   * If one Spool is shorter, excess elements of the longer
+   * Spool are discarded.
+   * 
+   * c.f. scala.collection.immutable.Stream#zip
+   */
+  def zip[B](that: Spool[B]): Spool[(A,B)] =
+    if (isEmpty) empty[(A,B)]
+    else if (that.isEmpty) empty[(A,B)]
+    else new LazyCons(
+      (head, that.head),
+      Future.join(tail, that.tail).map { case (thisTail, thatTail) =>
+        thisTail.zip(thatTail)
+      }
+    )
+
+  /**
    * The standard Scala collect, in order to implement map & filter.
    *
    * It may seem unnatural to return a Future[…] here, but we cannot
